@@ -16,6 +16,9 @@ Version 2.0.7 -
 - Fixed implementation of dir() for ParseResults - was leaving out all the
   defined methods and just adding the custom results names.
 
+- Fixed bug in ignore() that was introduced in pyparsing 1.5.3, that would
+  not accept a string literal as the ignore expression.
+
 
 Version 2.0.6 - 
 ---------------------------
